# ChangeLog for dev-lang/parrot
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.89 2014/12/16 08:54:24 patrick Exp $

*parrot-6.11.0 (16 Dec 2014)

  16 Dec 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.11.0.ebuild:
  Bump

*parrot-6.10.0 (23 Nov 2014)

  23 Nov 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.10.0.ebuild:
  Bump

*parrot-6.9.0 (25 Oct 2014)

  25 Oct 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.9.0.ebuild:
  Bump

*parrot-6.2.0-r1 (10 Oct 2014)
*parrot-6.4.0-r1 (10 Oct 2014)
*parrot-6.3.0-r1 (10 Oct 2014)
*parrot-6.5.0-r1 (10 Oct 2014)
*parrot-6.6.0-r1 (10 Oct 2014)
*parrot-6.8.0-r1 (10 Oct 2014)
*parrot-6.7.0-r1 (10 Oct 2014)

  10 Oct 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.2.0-r1.ebuild,
  +parrot-6.3.0-r1.ebuild, +parrot-6.4.0-r1.ebuild, +parrot-6.5.0-r1.ebuild,
  +parrot-6.6.0-r1.ebuild, +parrot-6.7.0-r1.ebuild, +parrot-6.8.0-r1.ebuild,
  -parrot-6.1.0.ebuild, -parrot-6.2.0.ebuild, -parrot-6.3.0.ebuild,
  -parrot-6.4.0.ebuild, -parrot-6.5.0.ebuild, -parrot-6.6.0.ebuild,
  -parrot-6.7.0.ebuild, -parrot-6.8.0.ebuild:
  Fix subslot

*parrot-6.8.0 (19 Sep 2014)

  19 Sep 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.8.0.ebuild:
  Bump

*parrot-6.7.0 (25 Aug 2014)

  25 Aug 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.7.0.ebuild:
  Bump

*parrot-6.6.0 (21 Jul 2014)
*parrot-6.4.0 (21 Jul 2014)

  21 Jul 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.4.0.ebuild,
  +parrot-6.6.0.ebuild:
  Bump

*parrot-6.5.0 (27 Jun 2014)

  27 Jun 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.5.0.ebuild:
  Bump

*parrot-6.3.0 (18 Apr 2014)

  18 Apr 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.3.0.ebuild:
  Bump

*parrot-6.2.0 (26 Mar 2014)

  26 Mar 2014; Patrick Lauer <patrick@gentoo.org> +parrot-6.2.0.ebuild:
  Bump

  25 Mar 2014; Mikle Kolyada <zlogene@gentoo.org> -files/perldoc-5.10.patch,