@@ -9,7 +9,7 @@ DIST parrot-6.7.0.tar.gz 4613520 SHA256 04b0ee976c61100af993f8830863ccfee9eada6b
 DIST parrot-6.8.0.tar.gz 4625363 SHA256 986a0e543e660e83595a3c477b7b7f065099edb559d74c56f61d88e216042f4e SHA512 f6bbb1576b2ea24379e4ec5778456754be41b01edf39c7b965124c195b16a7ac636f6000e168003310ded5eb420e16bb3881201a82a7d327fd0ff849ae7ca816 WHIRLPOOL 91bd7d1273a2ec8519ef63ee0d5b074e73d566c4f79f75dc4d13eb86574bf02b357ca364495441453c22463de930dcdcd78cdcf229b2281a5ea3ba8d02af39c3
 DIST parrot-6.9.0.tar.gz 4629472 SHA256 91ca66be5747b826374a91bb509c03c192e7a90f7742a279146a0a70639d5f9c SHA512 0308f98faafbd3cc0bfc50fdef004a169220da288a6180ba394a68b2c552e9a45f24d783ca45be1faebcad93466810e7abe16a95d81dec33c844c5ea9bb51c17 WHIRLPOOL 686020406e5c31234948320bcfbafa963423d80bcc0fde1fd893cd5dc622748f9923549c172c8ac780bcdb2f5a5fd30a2f1fb3010093164ea685e772158341f9
 EBUILD parrot-6.10.0.ebuild 2451 SHA256 c99e974093ef055906da7194c0a686ba751b274f07b9a90f6ccc03db3fef5dea SHA512 afde07b68a3b1bb812d1a5b41efdd6372d9ae42f663d72b97874f84047171066e8a0583912ebf45c24e42df7cb79538c763acd98f8256abcabd901d9c52492cc WHIRLPOOL 5b8ef5580c4a3cfff480989ff8f8fc36bb61d0877a6e537554883d72bb5aa51eda38b2cddac25fd7da51c1cfd9eec21d0abe7ebd029dbe90ae3824ff301e91c5
-EBUILD parrot-6.11.0.ebuild 2451 SHA256 c41fbb9b6f77f406655edca028cb0d433767aa28a590931053a3c21ca44d10bb SHA512 6fa9cf18fb04e31dddd737b37bdc07294c6aaf39a989542fee069318c42002dcd15eb3c29c5362bd25a33ce6923d8ef385d26c423521824fb27c46d0776430eb WHIRLPOOL a3769a5931bfc25f6750aeaaa842fe671144ed0b7b1624e757220c81a86bb755886642e67a29d0c4ab5b77856bcca27ed882967b5d0ef271accdb20316b0915f
+EBUILD parrot-6.11.0.ebuild 2468 SHA256 fc75bb81dd243174437d79ef200e21628ccdb784ebe5ece9bd4a4231b20bf1bc SHA512 75e737e3c2da364abfec861f4ed2a34bb4a5fd5e4ac82000f6260a060981e5492b45c3c4eca4b4379efbf0d6858f399aac60c43ade82b0eab78a16807ca2ef41 WHIRLPOOL a98645546f7f8772c27c29b392da99f2b381a5cb56bc78c7fddfcb9bda2171321a8debceb4e33f80a9c561717725339b52a01f57a3516ad36f1aeb0c9a45d8ee
 EBUILD parrot-6.2.0-r1.ebuild 2404 SHA256 3abbe1107582b98cdbf1750e4e023a69c6d0f56225d8308e52ee73d1c215497a SHA512 4d9e31ba89693dd6e824427a47203e95950d4eff88691cd4de42959f83ba9a7bfcdd5d2d97e902333a2d9bfd6ebdab558f2ae59319413998bea510dd68f753aa WHIRLPOOL 9e2a5aeecba617a1d2bc360a4a5d09355cc2f0b5a4ac83a377de1624b463d5b8027f63cf68d687241bf8941764297f37b5fce7354efeefb135b19ecb754a7977
 EBUILD parrot-6.3.0-r1.ebuild 2402 SHA256 946e61f57934d165fdc6da9424d5ca3d4cbe8f60b634879a67a9f0e1dc31c1e3 SHA512 ae1f416eb90b5ca11dc07d3ab323e04ac1ff7ad131757d6f73ff5a6cb48db6bb00a98a13150c9f1831c41771a9d0bdb6c15ead4d8b9a350ffee2a1b4ac4f3082 WHIRLPOOL ebdea13db302495d628bfb3bc75c1b9d22dcc7cab6408b688075fec00bf50848bbfbd3bc0cae750ec280a93a3eb30a4bb0d3feacc38aef322fcd08cc32396b0c
 EBUILD parrot-6.4.0-r1.ebuild 2402 SHA256 38870c099dbfa1f1b0f8a8ed81b2ea8978dc94fe8cf4dca585f24461a8d435d4 SHA512 eda071120cf5980cce2575fadf5477008aff647e969d7931cf003dfd9cc3d3e27652a13740c242f72636d61c83cebfb52b86978d108272affd7fdd2c2f0794d1 WHIRLPOOL 73a918865a2aa29e048d4fe1e32e097ed5b4c9d1cb9e2aebb4396d986165cf358173228bf44d6830c2076513bd66aed1ca4f2dbd414cbc0df45b5e96a7c74838
@@ -18,5 +18,5 @@ EBUILD parrot-6.6.0-r1.ebuild 2402 SHA256 aa478d1246325ad4f8909d45f2c4fa0bf0735f
 EBUILD parrot-6.7.0-r1.ebuild 2402 SHA256 00a0e29850e57bcc3b7bde22bcd6ff43c37589f31e2e886ab0a386814d8b6b9b SHA512 0f3f4a249160fe88155b1a02944ed6234955c15f738559e17e798a22ace29343262e1dab957b66cfa642068b63d8a8b4fbd9f01bdc19649021b45c3a8ec6a085 WHIRLPOOL 430e4b7503ad1959a7a8a44a58f4dfd61453376d4279ed49b829333c07717a41252a9de0098b7032db2013af7b9ce1a25cdd1b6a2d46c49ad098c096fc2aaf7d
 EBUILD parrot-6.8.0-r1.ebuild 2402 SHA256 8ada25897321a0744c2a41275a92f81555ab352a0c820b7762ee437ea54fdf15 SHA512 928b9d02b56995c877764a4889f950844e038cced6b4bcc18fb46b31ed96a810b8d768a36e14bf556fe42e66994f588909361f52ae317578852132f0e3d65d92 WHIRLPOOL 294ab08a00fca07db272d8d8eec76b6e08bacb0959f072ab5cf17a4e60e1fd97ca6888c75dc44a2f8a4d8c8d8b4dc184a5325a782624b39edc3ebbf11848e525
 EBUILD parrot-6.9.0.ebuild 2450 SHA256 bb2c28e98825362417be40d17500b86c3fab99dc55d6119099ff2d6b6870a9ad SHA512 3fa5cc9f44b6b9087792c9099c162ee2eba3e4ffbe7651d901639dddd0f61038cc21f96bdf23ae9a03628fa79e0192560bab8205eb73107f0e239b904ea0c42f WHIRLPOOL e2e193aefb2fafe2d0dc68e29328ddb5d3754b6c199d32849667c5e4b3eef53ac4c385a255ddc870a3b94acde78fa77a84700895b9aa8a9ba13f7000a62a640b
-MISC ChangeLog 12726 SHA256 b29ad99ef28c2ec95268af1b1bf8e8addfa6ad0b63734a38ef9a360e460927bf SHA512 93df429f2b3699ccff1fef9c25a5e22233c158418ceaee1e1ffd30553dbaca88f9f3879642308c68ba999100c75a6a553a0aed25f6b8f3a6c620264766b9c608 WHIRLPOOL 0865fec560a94deef63d7d01fe21bf93930aab06e1e1418e3b56524a38bac297393976e19583a53be7a622d59d86882e68924b9940630151e9d7b0bc074b0c77
+MISC ChangeLog 12816 SHA256 4f0ca376dba6482b5af5708b567fedc5aa2295ce46dc061e6707db7617570dbd SHA512 5cb0773f4d7aa7d5b6cd2d3a38f89468bf6001e6ca98a71154fa18744bfb9718fbffd32a5bf63c8f37fe9da124e07b134baf331d484061a1d2c87bc667929051 WHIRLPOOL 685e34ff6f072cac570abf22c4ac7e2c403f4fc44965bacfdfad479d1d463951ed16831d54a841b027ace426e19fe02e8363111c389dff15210c531c62db91e0
 MISC metadata.xml 157 SHA256 6a11fd41a2a210a9760849de398ef8c62cf46cc742d09b2e1781def7848fa1ec SHA512 95158d74d42674de03bc271c8dffa2264759c77681436de71fa9b3ad67f50b09394b0401e6df6dde526bc8dcd6ea666ed6767662bd63c3e92cb33b7b23e4ede8 WHIRLPOOL d3fdf14c384070120719ad4076cd04630790564f5bceda2a273e6481ea27a6fc6291e55d78cbf8bf99b73c7b42e8a1f286927c990702dceee97a63815cb33846
