@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/parrot-6.11.0.ebuild,v 1.1 2014/12/16 08:54:24 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/parrot-6.11.0.ebuild,v 1.2 2015/01/26 04:15:41 patrick Exp $
 
 EAPI=5
 
@@ -19,6 +19,7 @@ KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64
 IUSE="opengl nls doc examples gdbm gmp ssl +unicode pcre"
 
 RDEPEND="sys-libs/readline
+	dev-libs/libffi
 	opengl? ( media-libs/freeglut )
 	nls? ( sys-devel/gettext )
 	unicode? ( >=dev-libs/icu-2.6:= )
